Add responsive UI

--- a/css/Ex1.css
+++ b/css/Ex1.css
@@ -17,3 +17,10 @@ body{
 .cl_sec_btns{
     background-color: green ;
 }
+
+/* Mobile CSS Only */
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+}
